# dist/swagger.yaml
@@ -172,6 +172,8 @@ info:
 host: quire.io
 basePath: /api
 tags:
+  - name: comments
+    description: The comment belong to a task or project
   - name: organizations
     description: An organization represents a prioritized list of projects in Quire.
   - name: projects
@@ -188,6 +190,88 @@ tags:
 schemes:
   - https
 paths:
+  '/comments/{oid}':
+    put:
+      tags:
+        - comments
+      summary: Update a comment
+      description: >-
+        A specific, existing comment can be updated by making a PUT request on
+        the URL for that comment.
+
+        Returns the complete updated comment record.
+      operationId: updateComment
+      produces:
+        - application/json
+      parameters:
+        - name: oid
+          in: path
+          description: OID of comment that needs to be updated
+          required: true
+          type: string
+        - in: body
+          name: body
+          description: Comemnt to update
+          required: true
+          schema:
+            $ref: '#/definitions/UpdateCommentBody'
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Project'
+        '400':
+          description: Bad parameter
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '403':
+          description: Not allow
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '404':
+          description: Comment not found
+          examples:
+            application/json:
+              message: 'Comment not found: Marketing_Project'
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+    delete:
+      tags:
+        - comments
+      summary: Delete a comment
+      description: >-
+        A specific, existing comment can be deleted by making a DELETE request
+        on the URL for that comment.
+      operationId: deleteComment
+      produces:
+        - application/json
+      parameters:
+        - name: oid
+          in: path
+          description: OID of comment that needs to be deleted
+          required: true
+          type: string
+      responses:
+        '200':
+          description: ok
+          examples:
+            application/json:
+              Success: 'true'
+        '400':
+          description: Bad parameter
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '403':
+          description: Not allow
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '404':
+          description: Comment not found
+          examples:
+            application/json:
+              message: Comment not found
+          schema:
+            $ref: '#/definitions/ErrorResponse'
   /organizations:
     get:
       tags:
@@ -586,6 +670,34 @@ paths:
               message: 'Project not found: Marketing_Project'
           schema:
             $ref: '#/definitions/ErrorResponse'
+    post:
+      tags:
+        - projects
+      summary: Add a project comment
+      description: Add a new comment in a project.
+      operationId: createProjectComment
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          description: Comment to create
+          required: true
+          schema:
+            $ref: '#/definitions/CreateCommentBody'
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Comment'
+        '400':
+          description: Bad parameter
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '403':
+          description: Not allow
+          schema:
+            $ref: '#/definitions/ErrorResponse'
   /tasks:
     post:
       tags:
@@ -950,6 +1062,34 @@ paths:
               message: 'Task not found: 12'
           schema:
             $ref: '#/definitions/ErrorResponse'
+    post:
+      tags:
+        - tasks
+      summary: Add a task comment
+      description: Add a new comment in a task.
+      operationId: createTaskComment
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          description: Comment to create
+          required: true
+          schema:
+            $ref: '#/definitions/CreateCommentBody'
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/Comment'
+        '400':
+          description: Bad parameter
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '403':
+          description: Not allow
+          schema:
+            $ref: '#/definitions/ErrorResponse'
 securityDefinitions:
   api_key:
     type: apiKey
@@ -968,17 +1108,25 @@ definitions:
   Comment:
     type: object
     properties:
+      createdAt:
+        type: string
+        example: '2018-12-22T02:06:58.158Z'
+      createdBy:
+        $ref: '#/definitions/User'
       description:
         type: string
         example: Adjust style
       pinned:
         type: boolean
         example: false
-      createdAt:
+  CreateCommentBody:
+    type: object
+    required:
+      - text
+    properties:
+      text:
         type: string
-        example: '2018-12-22T02:06:58.158Z'
-      createdBy:
-        $ref: '#/definitions/User'
+        example: Adjust style
   CreateOrganizationBody:
     type: object
     properties:
@@ -1014,6 +1162,9 @@ definitions:
         type: string
         example: '13'
         description: (optional) The previous sibling task id
+      due:
+        type: string
+        example: '2018-12-22T02:06:58.158Z'
       start:
         type: string
         example: '2018-12-20T02:06:58.158Z'
@@ -1021,9 +1172,6 @@ definitions:
         type: string
         example: john
         description: User id to assign
-      due:
-        type: string
-        example: '2018-12-22T02:06:58.158Z'
   ErrorResponse:
     type: object
     required:
@@ -1043,20 +1191,20 @@ definitions:
       id:
         type: string
         example: Develop_group
-      image:
-        type: string
-        example: 'https://quire.s3.amazonaws.com/oid/image.jpg'
-      initials:
-        type: string
-        example: DG
       iconColor:
         type: string
         example: '#a9cb77'
+      image:
+        type: string
+        example: 'https://quire.s3.amazonaws.com/oid/image.jpg'
       createdAt:
         type: string
         example: '2018-12-22T02:06:58.158Z'
       createdBy:
         $ref: '#/definitions/User'
+      initials:
+        type: string
+        example: DG
   OrganizationWithProjects:
     type: object
     properties:
@@ -1070,20 +1218,20 @@ definitions:
       id:
         type: string
         example: Develop_group
-      image:
-        type: string
-        example: 'https://quire.s3.amazonaws.com/oid/image.jpg'
-      initials:
-        type: string
-        example: DG
       iconColor:
         type: string
         example: '#a9cb77'
+      image:
+        type: string
+        example: 'https://quire.s3.amazonaws.com/oid/image.jpg'
       createdAt:
         type: string
         example: '2018-12-22T02:06:58.158Z'
       createdBy:
         $ref: '#/definitions/User'
+      initials:
+        type: string
+        example: DG
   Project:
     type: object
     properties:
@@ -1093,20 +1241,20 @@ definitions:
       id:
         type: string
         example: Marketing_Project
-      image:
-        type: string
-        example: 'https://quire.s3.amazonaws.com/oid/image.jpg'
-      initials:
-        type: string
-        example: MP
       iconColor:
         type: string
         example: '#a9cb77'
+      image:
+        type: string
+        example: 'https://quire.s3.amazonaws.com/oid/image.jpg'
       createdAt:
         type: string
         example: '2018-12-22T02:06:58.158Z'
       createdBy:
         $ref: '#/definitions/User'
+      initials:
+        type: string
+        example: MP
   Tag:
     type: object
     properties:
@@ -1133,6 +1281,11 @@ definitions:
         type: integer
         format: int32
         example: 0
+      createdAt:
+        type: string
+        example: '2018-12-22T02:06:58.158Z'
+      createdBy:
+        $ref: '#/definitions/User'
       description:
         type: string
         example: Detail about this task
@@ -1144,17 +1297,12 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/Tag'
-      createdAt:
-        type: string
-        example: '2018-12-22T02:06:58.158Z'
-      createdBy:
-        $ref: '#/definitions/User'
-      start:
-        type: string
-        example: '2018-12-20T02:06:58.158Z'
       due:
         type: string
         example: '2018-12-22T02:06:58.158Z'
+      start:
+        type: string
+        example: '2018-12-20T02:06:58.158Z'
   TaskWithChildren:
     type: object
     properties:
@@ -1173,6 +1321,11 @@ definitions:
         type: integer
         format: int32
         example: 0
+      createdAt:
+        type: string
+        example: '2018-12-22T02:06:58.158Z'
+      createdBy:
+        $ref: '#/definitions/User'
       description:
         type: string
         example: Detail about this task
@@ -1184,17 +1337,23 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/Tag'
-      createdAt:
-        type: string
-        example: '2018-12-22T02:06:58.158Z'
-      createdBy:
-        $ref: '#/definitions/User'
-      start:
-        type: string
-        example: '2018-12-20T02:06:58.158Z'
       due:
         type: string
         example: '2018-12-22T02:06:58.158Z'
+      start:
+        type: string
+        example: '2018-12-20T02:06:58.158Z'
+  UpdateCommentBody:
+    type: object
+    required:
+      - text
+    properties:
+      text:
+        type: string
+        example: Adjust style
+      pinned:
+        type: boolean
+        example: false
   UpdateOrganizationBody:
     type: object
     properties:
@@ -1222,15 +1381,15 @@ definitions:
       description:
         type: string
         example: Detail about this task
+      due:
+        type: string
+        example: '2018-12-22T02:06:58.158Z'
       start:
         type: string
         example: '2018-12-20T02:06:58.158Z'
       assignee:
         type: string
         example: john
-      due:
-        type: string
-        example: '2018-12-22T02:06:58.158Z'
   User:
     type: object
     properties:
@@ -1240,12 +1399,12 @@ definitions:
       id:
         type: string
         example: john
+      iconColor:
+        type: string
+        example: '#a9cb77'
       image:
         type: string
         example: 'https://quire.s3.amazonaws.com/oid/image.jpg'
       initials:
         type: string
-        example: MP
-      iconColor:
-        type: string
-        example: '#a9cb77'
+        example: J
