# src/main/java/io/quire/api/model/comment/CreateCommentBody.java
@@ -1,0 +1,8 @@
+package io.quire.api.model.comment;
+
+import io.swagger.annotations.ApiModelProperty;
+
+public class CreateCommentBody {
+    @ApiModelProperty(example = "Adjust style", required = true)
+    public String getDescription() { return null; }
+}
